--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -1,10 +1,25 @@
 .mobile-nav {
-  display: none;
+  position: fixed;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  z-index: 10;
+  background-color: #fafafa;
+  transform: translateX(100%);
+  transition: transform 0.3s;
 
   &__link {
+    color: #252b42;
+    text-decoration: none;
+    margin-top: 20px;
+    font-size: 1.2rem;
+    font-weight: 500;
   }
 }
 
 .mobile-nav--active {
-  display: block;
+  transform: translateX(0);
 }
