--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -3,9 +3,6 @@ html {
   font-size: 16px;
 }
 
-body {
-}
-
 *,
 *:before,
 *:after {
@@ -30,6 +27,11 @@ ul {
 ol,
 ul {
   list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 img {
