add styles to hero section

--- a/src/sass/abstracts/_fonts.scss
+++ b/src/sass/abstracts/_fonts.scss
@@ -11,3 +11,9 @@ $main-font: "Montserrat", sans-serif;
   src: url(../assets/fonts/Monteserrat/Monteserrat-SemiBold.ttf);
   font-weight: 600;
 }
+
+@font-face {
+  font-family: $main-font;
+  src: url(../assets/fonts/Monteserrat/Monteserrat-Bold.ttf);
+  font-weight: 700;
+}
