add footer; fix fonts

--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -12,11 +12,22 @@
   transition: transform 0.3s;
 
   &__link {
+    width: 50%;
+    padding: 12px 16px;
     color: #252b42;
+    text-align: center;
     text-decoration: none;
     margin-top: 20px;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: 500;
+    background-color: #efefef;
+    border-radius: 10px;
+    transition: color 0.2s, background-color 0.2s;
+
+    &:hover {
+      color: #fff;
+      background-color: #fa4a0c;
+    }
   }
 }
 
