--- a/src/sass/abstracts/_fonts.scss
+++ b/src/sass/abstracts/_fonts.scss
@@ -1,19 +1,3 @@
 $main-font: "Montserrat", sans-serif;
-
-@font-face {
-  font-family: $main-font;
-  src: url(../assets/fonts/Monteserrat/Montserrat-Medium.ttf);
-  font-weight: 500;
-}
-
-@font-face {
-  font-family: $main-font;
-  src: url(../assets/fonts/Monteserrat/Monteserrat-SemiBold.ttf);
-  font-weight: 600;
-}
-
-@font-face {
-  font-family: $main-font;
-  src: url(../assets/fonts/Monteserrat/Monteserrat-Bold.ttf);
-  font-weight: 700;
-}
+$second-font: "Poppins", sans-serif;
+$footer-font: "Roboto", sans-serif;
