--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,5 +1,3 @@
-@use "../abstracts/fonts" as f;
-
 .hero {
 
   &__top {
@@ -92,5 +90,6 @@
     background: url(../assets/images/food-app-img-1.png) left top / 80%,
                 url(../assets/images/food-app-img-2.png) right / 50%;
     background-repeat: no-repeat;
+    margin-bottom: 40px;
   }
 }
