add responsiveness for header & hero; change menu

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,3 +1,6 @@
+$header-height-mob: 112px;
+$header-height-desk: 150px;
+
 $burger-btn-width: 26px;
 $burger-line-height: 4px;
 $burger-line-gap: 9px;
