--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,8 +1,21 @@
+@use "../abstracts/mixins" as m;
+@use "../abstracts/fonts" as f;
+
 .hero {
+
+  @include m.tablet {
+    background-image: url(../assets/images/hero-bg.png);
+    background-repeat: no-repeat;
+    background-position: 0px 0px;
+  }
 
   &__top {
     padding: 50px 10px 22px;
     background-color: #fafafa;
+
+    @include m.tablet {
+      background-color: transparent;
+    }
   }
 
   &__subtitle {
@@ -12,9 +25,20 @@
     line-height: 24px; /* 150% */
     letter-spacing: 0.1px;
     margin-bottom: 17px;
+
+    @include m.tablet {
+      color: #f6f6f6;
+      line-height: 36px; /* 150% */
+    }
+
+    @include m.desktop {
+      margin-bottom: 0;
+    }
   }
 
   &__title {
+    max-width: 560px;
+    margin: auto;
     color: #252b42;
     text-align: center;
     font-size: 36px;
@@ -22,6 +46,19 @@
     line-height: 42.5px; /* 118.056% */
     letter-spacing: 0.2px;
     margin-bottom: 27px;
+    
+    @include m.tablet {
+      max-width: 600px;
+      font-family: f.$second-font;
+      color: #fff;
+      margin-bottom: 0;
+    }
+
+    @include m.desktop {
+      max-width: 960px;
+      font-size: 58px;
+      line-height: 80px; /* 137.931% */
+    }
   }
 
   &__description {
@@ -33,6 +70,11 @@
     line-height: 38px; /* 158.333% */
     letter-spacing: 0.2px;
     margin-bottom: 50px;
+
+    @include m.tablet {
+      color: #f6f6f6;
+      margin-bottom: 30px;
+    }
   }
 
   .download-btn {
@@ -40,6 +82,11 @@
     flex-direction: column;
     align-items: center;
     gap: 17px;
+
+    @include m.desktop {
+      flex-direction: row;
+      justify-content: center ;
+    }
 
     &__btn {
       width: 236px;
@@ -59,6 +106,10 @@
       box-shadow: 0 40px 40px 0 rgba(0, 0, 0, 0.07);
       border: 1px solid #fff;
 
+      @include m.tablet {
+        border: none;
+      }
+
       &:hover {
         background: linear-gradient(90deg, rgba(0,93,167,1) 0%,
                         rgba(0,142,40,1) 40%,
@@ -73,6 +124,11 @@
       background-color: transparent;
       border: 1px solid #fa4a0c;
 
+      @include m.tablet {
+        color: #fff;
+        border: 1px solid #fff;
+      }
+
       &:hover {
         color: #fff;
         background: linear-gradient(0deg, rgba(30,187,175,1) 0%,
@@ -81,6 +137,7 @@
                   rgba(84,156,255,1) 100%);
         border: 1px solid #fff;
         transform: scale(1.02);
+
       }
     }
   }
@@ -91,5 +148,11 @@
                 url(../assets/images/food-app-img-2.png) right / 50%;
     background-repeat: no-repeat;
     margin-bottom: 40px;
+
+    @include m.tablet {
+      width: 540px;
+      height: 640px;
+      margin: auto;
+    }
   }
 }
