--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -1,5 +1,9 @@
+@use "../abstracts/variables" as v;
+
 .mobile-nav {
+  padding-top: v.$header-height-mob;
   position: fixed;
+  top: 0;
   left: 0;
   right: 0;
   display: flex;
@@ -7,7 +11,7 @@
   align-items: center;
   height: 100vh;
   z-index: 10;
-  background-color: #fafafa;
+  background-color: #434343;
   transform: translateX(100%);
   transition: transform 0.3s;
 
