add responsiveness to download section and footer

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -18,6 +18,12 @@
 
 @font-face {
   font-family: "Poppins";
+  src: url(../assets/fonts/Poppins/Poppins-SemiBold.ttf);
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "Poppins";
   src: url(../assets/fonts/Poppins/Poppins-Bold.ttf);
   font-weight: 700;
 }
