--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -7,6 +7,11 @@
     background-image: url(../assets/images/hero-bg.png);
     background-repeat: no-repeat;
     background-position: 0px 0px;
+    background-size: auto 55%;
+  }
+
+  @media (min-width: 1440px) {
+    background-size: 100% 55%;
   }
 
   &__top {
