--- a/src/sass/layouts/_main.scss
+++ b/src/sass/layouts/_main.scss
@@ -1,3 +1,6 @@
+@use "../abstracts/mixins" as m;
+@use "../abstracts/fonts" as f;
+
 .main {
 
   .how-it-works {
@@ -10,13 +13,49 @@
       padding-bottom: 46px;
       border-bottom: 3px solid #e4e4e4;
       margin-bottom: 65px;
+
+      @include m.tablet {
+        max-width: 884px;
+        margin: 0 auto 120px;
+        border-top: 3px solid #e4e4e4;
+        border-bottom: none;
+        padding: 65px 0 0;
+        font-family: f.$second-font;
+        font-size: 44px;
+        font-weight: 600;
+      }
     }
 
     .action {
+      max-width: 1140px;
+      margin-inline: auto;
       padding-inline: 38px;
       margin-bottom: 65px;
 
-      &__content {}
+      @include m.tablet {
+        display: flex;
+        justify-content: space-between;
+
+        &:not(:last-child) {
+          margin-bottom: 150px;
+        }
+
+        &:nth-child(even) {
+          flex-direction: row-reverse;
+        }
+      }
+
+      &__content {
+        text-align: center;
+
+        @include m.tablet {
+          flex-basis: 50%;
+          text-align: left;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+        }
+      }
 
       &__title {
         color: #fa4a0c;
@@ -25,6 +64,10 @@
         line-height: 36px; /* 150% */
         letter-spacing: 0.1px;
         margin-bottom: 40px;
+
+        @include m.tablet {
+          margin-bottom: 17px;
+        }
       }
 
       &__info {
@@ -34,30 +77,52 @@
         line-height: 57px; /* 142.5% */
         letter-spacing: 0.2px;
         margin-bottom: 50px;
+
+        @include m.tablet {
+          margin-bottom: 27px;
+        }
       }
 
       &__hint {
         max-width: 257px;
-        margin: auto;
+        margin-inline: auto;
         color: #737373;
         font-size: 24px;
         font-weight: 500;
         line-height: 38px; /* 158.333% */
         letter-spacing: 0.2px;
         margin-bottom: 40px;
+
+        @include m.tablet {
+          max-width: none;
+          margin-bottom: 0;
+        }
       }
 
       &__img {
         display: block;
         margin: auto;
         box-shadow: 50px 30px 150px 0 rgba(46, 4, 4, 0.15);
+
+        @include m.tablet {
+          margin-inline: 40px;
+        }
       }
     }
   }
 
   .download {
+    text-align: center;
     padding: 120px 40px 112px;
     background-color: #252b42;
+
+    @include m.tablet {
+      padding: 140px 40px 130px;
+      background-color: transparent;
+      background-image: url(../assets/images/download-bg.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
 
     &__title {
       color: #fff;
@@ -75,6 +140,22 @@
       line-height: 38px; /* 158.333% */
       letter-spacing: 0.2px;
       margin-bottom: 60px;
+
+      .full-text {
+        display: none;
+      }
+
+      @include m.tablet {
+        color: #fff;
+
+        .full-text {
+          display: inline;
+        }
+  
+        .short-text {
+          display: none;
+        }
+      }
     }
 
     &__buttons {
