--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -1,4 +1,5 @@
-@use "../abstracts/variables" as v;
+@use "../abstracts/" as v;
+@use "../utils/" as u;
 
 .mobile-nav {
   padding-top: v.$header-height-mob;
@@ -6,31 +7,26 @@
   top: 0;
   left: 0;
   right: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include u.flex(column, flex-start, center);
   height: 100vh;
   z-index: 10;
-  background-color: #434343;
+  background-color: v.$menu-bg-color;
   transform: translateX(100%);
   transition: transform 0.3s;
 
   &__link {
     width: 50%;
     padding: 12px 16px;
-    color: #252b42;
-    text-align: center;
-    text-decoration: none;
     margin-top: 20px;
-    font-size: 1.5rem;
-    font-weight: 500;
-    background-color: #efefef;
+    @include u.text-styles(v.$main-text-color, 1.5rem, 500, center);
+    text-decoration: none;
+    background-color: v.$menu-btn-color;
     border-radius: 10px;
     transition: color 0.2s, background-color 0.2s;
 
     &:hover {
       color: #fff;
-      background-color: #fa4a0c;
+      background-color: v.$main-ui-color;
     }
   }
 }
@@ -40,6 +36,6 @@
 
   .link-active {
     color: #fff;
-    background-color: #9d2900;
+    background-color: v.$menu-active-btn-color;
   }
 }
