--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -2,7 +2,7 @@
 @use "../utils/" as u;
 
 .mobile-nav {
-  padding-top: v.$header-height-mob;
+  padding: v.$header-h-mob 0 u.toRem(40px);
   position: fixed;
   top: 0;
   left: 0;
@@ -13,12 +13,12 @@
   z-index: 10;
   background-color: v.$menu-bg-color;
   transform: translateX(100%);
-  transition: transform 0.3s;
+  transition: transform v.$default-time-duration;
 
   &__link {
     width: 50%;
-    padding: 12px 16px;
-    margin-top: 20px;
+    padding: u.toRem(12px, 16px);
+    margin-top: u.toRem(20px);
     @include u.text-styles(v.$main-text-color, 1.5rem, 500, center);
     text-decoration: none;
     background-color: v.$menu-btn-color;
